k8s/meeting-k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: meeting-v1
spec: 
    selector:
        app: meeting
    type: NodePort
    ports:
        - port: 3000
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: meeting-deployment
    labels:
        app: meeting
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: meeting
    template:
        metadata:
            labels:
                app: meeting
        spec:
            containers:
                - name: meeting-v1
                  image: gcr.io/optimistic-yew-208712/meeting:0.0.2
                  ports:
                      - containerPort: 3000
