k8s/worker-k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: worker-v1
spec: 
    #type: LoadBalancer
    selector:
        app: worker
    ports:
        - port: 4000
          targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
    labels:
        app: worker
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: worker
    template:
        metadata:
            labels:
                app: worker
        spec:
            containers:
                - env:
                    - name: MEETING_HOST
                      value: "meeting-v1"
                  name: worker-v1
                  #image: gcr.io/feisty-catcher-208711/worker:0.0.7
                  image: shikloshi/worker:0.0.1
                  ports:
                      - containerPort: 4000
